@@ -16,6 +16,7 @@ DATE 0x/xx/2009
 NEWS:
 
 NEW: [features/improvments]
++Greatly improved performance of loading large files.
 +Add Count feature to find dialog for counting number of matches in a buffer.
 +Add Vim find char motions (patch from hasan.aljudy).
 +Add support for the Groovy programming language (patch from omar.gomez).
